tests/scan/fixtures/validation/negative/clean_cargo_clean_task_runner/src/lib.rs
//! A clean Rust crate: clean_task_runner.

pub fn hello() -> &'static str { "hello" }
